--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-router-dom": "4.2.2",
+    "react-md": "1.2.11",
+    "webfontloader": "1.6.28",
+    "styled-components": "3.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
