--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-router-dom": "4.2.2",
     "react-md": "1.2.11",
-    "webfontloader": "1.6.28",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "3.0.1",
+    "react-search-field": "1.0.0",
     "styled-components": "3.1.6",
-    "react-search-field": "1.0.0"
+    "webfontloader": "1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "react-dev-utils": "^9.0.1"
   }
 }
