--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Chrome",
             "type": "chrome",
             "request": "launch",
+            "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceRoot}/src"
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
