--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-md": "1.2.11",
+    "react-notifications": "^1.4.3",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.0.1",
     "react-search-field": "1.0.0",
